name:           Real-World-Haskell
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         nature.song

library
  hs-source-dirs:  src
  build-depends:   base >= 4
  ghc-options:     -Wall

executable Real-World-Haskell
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   base >= 4
  ghc-options:     -Wall

